llm/manifests/federation/01_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: llm
  labels:
    istio-injection: enabled
    authorino.kuadrant.io/watched: "true"
