llm/manifests/federation/04_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maas-backend
  namespace: llm
spec:
  type: ExternalName
  externalName: maas-rhdp.apps.maas.redhatworkshops.io
  ports:
  - port: 443
    name: https
    protocol: TCP
