llm/manifests/federation/02_service-entry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: maas-external
  namespace: llm
spec:
  hosts:
  - maas-rhdp.apps.maas.redhatworkshops.io
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  location: MESH_EXTERNAL
  resolution: DNS
