llm/manifests/federation/03_destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: maas-external-tls
  namespace: llm
spec:
  host: maas-rhdp.apps.maas.redhatworkshops.io
  trafficPolicy:
    tls:
      mode: SIMPLE
      insecureSkipVerify: true
