llm/manifests/federation/06_http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: maas-route
  namespace: llm
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: prod-gateway
    namespace: ingress-gateway
  hostnames:
  - llm.demo.leonlevy.lol
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /v1
    filters:
    - type: URLRewrite
      urlRewrite:
        hostname: maas-rhdp.apps.maas.redhatworkshops.io 
    backendRefs:
    - name: maas-backend
      port: 443
